--- a/assets/login.css
+++ b/assets/login.css
@@ -28,6 +28,10 @@ input:focus, input[type="text"]:focus, input[type="email"]:focus, input[type="ur
 
 }
 
+.ingresa .tml .tml-error{ line-height: 2rem; color:#333}
+.ingresa .tml .tml-errors{margin-top: 20px;}
+.ingresa .tml p{font-size: .9rem;}
+
 body{
     background: linear-gradient(-60deg,
                 #89743B 0, #89743B  30%,
@@ -52,7 +56,8 @@ body{
 .ingresa{
     background: rgba(83, 106, 232, 0.7);
     backdrop-filter: blur(20px);
-    min-width: 515px;
+    max-width: 515px;
+    width: 100%;
     border-radius: 27px;
     margin: 5% 4%;
 }
