--- a/assets/login.css
+++ b/assets/login.css
@@ -34,7 +34,7 @@ body{
                 #2A3442 0, #2A3442 60%,
                 black 0, black);
     background-repeat: no-repeat;
- height: 100%;
+    height: 100vh;
    
 }
 
@@ -171,6 +171,8 @@ ul{
 
 .footer{
     background-color: #151515;
+position: relative;
+bottom: 0;
 }
 
 .footer-t{
