--- a/assets/login/login.css
+++ b/assets/login/login.css
@@ -16,8 +16,15 @@ input[type=email], input[type=number], input[type=password], input[type=reset], 
     background-color: transparent !important;
     color: white;
     border: 0px;
+    outline: none;
     border-bottom: 1px solid;
 }
+input::placeholder{color: white;}
+input[type=checkbox]{outline: none;}
+
+
+
+form .error{color: #ff0000;}
 
 input:focus, input[type="text"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[type="reset"]:focus, input[type="search"]:focus, textarea:focus{ border-color: #01DFF5; color: white;}
 
@@ -38,7 +45,6 @@ body{
                 #2A3442 0, #2A3442 60%,
                 black 0, black);
     background-repeat: no-repeat;
-    height: 100vh;
    
 }
 
@@ -56,7 +62,7 @@ body{
 .ingresa{
     background: rgba(83, 106, 232, 0.7);
     backdrop-filter: blur(20px);
-    max-width: 515px;
+    max-width: 615px;
     width: 100%;
     border-radius: 27px;
     margin: 5% 4%;
@@ -84,6 +90,9 @@ form{
     color: #FFFFFF;
     border: none;
     background-color: transparent;
+}
+.ingresa a:hover{
+    color:white;
 }
 
 .registrate{
