--- a/assets/account/account.css
+++ b/assets/account/account.css
@@ -2,6 +2,7 @@
 header{
     background-image: url('http://mokaru.com.co/wp-content/uploads/2022/07/Recurso-1.png');
     height: 100vh;
+    width: 200px;
     background-repeat: no-repeat;
     background-position-x:center ;
     background-position-y: bottom;
