--- a/assets/dashboard/dashboard.css
+++ b/assets/dashboard/dashboard.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;900&display=swap');
 
+.noShow{
+    display: none;
+}
+
 *{
     margin: 0px;
     box-sizing: border-box;
