--- a/assets/login/login.css
+++ b/assets/login/login.css
@@ -1,44 +1,171 @@
 
 
-body{background-color: transparent; background-image: linear-gradient(50deg, #203083 41%, #5640E3 100%);}
-main{max-width: 600px;  margin: auto;padding: 40px 10px;}
 
-h1{text-align: center; color: white; text-transform: uppercase;}
+main{max-width: 600px;  margin: auto;padding:  10px;}
+
+h1{text-align: center; color: rgb(0, 0, 0); text-transform: uppercase;}
 
 .site-content .ast-container{justify-content: center; }
 .tml-errors{background-color: white;}
 
 p,
-label{color: white;}
+label{color: rgb(0, 0, 0); text-align: left;}
 
 
 input[type=email], input[type=number], input[type=password], input[type=reset], input[type=search], input[type=tel], input[type=text], input[type=url], select, textarea {
-    background-color: transparent !important;
-    color: white;
+    background-color: rgb(240, 240, 240) !important;
+    color: rgb(0, 0, 0);
     border: 0px;
     outline: none;
-    border-bottom: 1px solid;
+    
 }
-input::placeholder{color: white;}
+input::placeholder{color: rgb(255, 255, 255);}
 input[type=checkbox]{outline: none;}
 
 
 
 form .error{color: #ff0000;}
 
-input:focus, input[type="text"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[type="reset"]:focus, input[type="search"]:focus, textarea:focus{ border-color: #01DFF5; color: white;}
+input:focus, input[type="text"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[type="reset"]:focus, input[type="search"]:focus, textarea:focus{ border-color: #01DFF5; color: rgb(0, 0, 0);}
 
 
 
-*{
-    margin: 0;
 
-}
 
 .ingresa .tml .tml-error{ line-height: 2rem; color:#333}
 .ingresa .tml .tml-errors{margin-top: 20px;}
 .ingresa .tml p{font-size: .9rem;}
 
+
+
+
+
+
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: rgb(255, 255, 255);
+}
+
+.logo_container{
+    margin: 50px 0;
+    
+    text-align: center;
+}
+.logo_login{
+    max-width: 250px;  
+}
+
+.buttons{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.login{
+    text-align: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.ingresa{
+    border: 1px solid #37DFF5;
+    border-radius: 30px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    padding: 40px;
+    margin: 0 10px 10px 10px;
+    max-width: 400px;
+    box-shadow: 8px 13px 44px -6px #DFDBF7;
+    
+}
+
+
+
+
+form .tml-log-wrap{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+
+    margin-top: 25px;
+    
+}
+
+form .tml-pwd-wrap{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+
+    margin-top: 25px;
+    
+}
+
+form .tml-pwd-wrap input{
+    margin-top: 10px;
+}
+
+form .tml-log-wrap input{
+    margin-top: 10px;
+}
+
+
+.buttons a{
+    text-decoration: none;
+    background-color: transparent;
+    border: 1px solid #37DFF5;
+    color: #37DFF5;
+    font-size: 18px;
+    padding: 5px 10px;
+    border-radius: 12px;
+    transition: ease 0.5s;
+}
+
+.buttons a:hover{
+    color: #FFFFFF;
+    background-color: #37DFF5;
+}
+
+form .tml-rememberme-wrap{
+    margin: 15px 0;
+    text-align: left;
+}
+
+.tml-button{
+    text-decoration: none;
+    background-color: #37DFF5;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 7px 20px;
+    border-radius: 12px;
+    transition: ease 0.5s;
+    border: none;
+}
+
+.linksO{
+    margin: 20px 0 0 0 ;
+    
+   
+}
+
+.fondo{
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+}
+
+
+/*
 body{
     background: linear-gradient(-60deg,
                 #89743B 0, #89743B  30%,
@@ -220,31 +347,4 @@ color: #FFFFFF;
     margin-bottom: 50px;
 }
 
-@media (max-width:1098px) {
-
-    .login{
-        flex-direction: column;
-    }
-
-    .text{
-        text-align: center;
-    }
-
-    .ingresa{
-        background: rgba(83, 106, 232, 0.7);
-        backdrop-filter: blur(20px);
-        min-width: 215px;
-        max-height: 600px;
-        border-radius: 27px;
-        margin: 5% 4%;
-    }
-    
-    .buttons{
-        margin: 0 10%;
-    }
-
-    .Logo-img{
-        width: 150px;
-        text-align: center;
-    }
-}
+*/
