--- a/assets/account/account.css
+++ b/assets/account/account.css
@@ -1,5 +1,5 @@
 
-header{
+.account-dashboard header{
     background-image: url('http://mokaru.com.co/wp-content/uploads/2022/07/Recurso-1.png');
     height: 100vh;
     width: 200px;
