--- a/assets/front/main.css
+++ b/assets/front/main.css
@@ -10,9 +10,8 @@
   }
   
 
-
 /*NAV*/
-header {
+  header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -151,4 +150,644 @@ header {
         margin: 0 0 10px 0;
     }
   }
+
+
 /*NAV*/
+
+
+/*BANER*/
+
+@media (max-width: 1072px){
+
+   
+    
+    
+    
+    
+    
+    .der h1{
+        font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    color: #000000;
+    margin: 10% 0 0 5%; 
+    }
+    
+    .der h1 span{
+        background: linear-gradient(93.26deg, #02DDFA 4.49%, #3076E8 62.66%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+    
+    }
+    
+    .der p{
+        margin: 0 0 0 5%; 
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 16px;
+    }
+    
+    
+    .izq img{
+        width: 100%;
+        max-width: max-content;
+    }
+
+    .mail{
+        border: 1px solid  #37DFF5 ;
+        width: 70%;
+        height: 40px;
+        margin-top: 5px;
+        background-color: transparent;
+        padding-left: 30px;
+    }
+    
+    .enviar{
+        position: relative;
+        right: 6px;
+        background-color: #3076E8 ;
+        border: none;
+        height: 40px;
+        width: 60px;
+        color: #FFFFFF;
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 300;
+        border-radius: 0;
+        text-align: center;
+    
+    }
+    
+    .form{
+        margin: 10% 0 0 5%; 
+    }
+    
+    .label_1{ 
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 16px;
+    }
+}
+
+
+@media (min-width: 1072px){
+
+    .baner{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    
+    
+ 
+    
+    .der h1{
+       
+        font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 64px;
+    color: #000000;
+    margin: 10% 0 0 12%; 
+    }
+    
+    .der h1 span{
+        background: linear-gradient(93.26deg, #02DDFA 4.49%, #3076E8 62.66%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+    
+    }
+    
+    .der p{
+        margin: 0 0 0 12%; 
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 16px;
+    }
+    
+    
+    .mail{
+        border: 1px solid  #37DFF5 ;
+        width: 70%;
+        height: 40px;
+        margin-top: 5px;
+        background-color: transparent;
+        padding-left: 30px;
+    }
+    
+    .enviar{
+        position: relative;
+        right: 6px;
+        background-color: #3076E8 ;
+        border: none;
+        height: 40px;
+        width: 60px;
+        color: #FFFFFF;
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 300;
+        border-radius: 0;
+        text-align: center;
+    
+    }
+    
+    .form{
+        margin: 10% 0 0 12%; 
+    }
+    
+    .label_1{ 
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 16px;
+    }
+}
+
+/*BANER*/
+  
+
+
+
+/*SERVICIOS*/
+
+
+
+.section_cards{
+    
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 600;
+font-size: 24px;
+line-height: 29px;
+margin: 0 0 0 6%;
+}
+
+
+.card{
+    width: 303px;
+    height: 435px;
+    margin: 20px 3%;
+    border-radius: 5px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.bg1{
+    background-image: url("http://mokaru.com.co/wp-content/uploads/2022/10/card1.jpg");
+}
+
+.bg2{
+    background-image: url("http://mokaru.com.co/wp-content/uploads/2022/10/card2.jpg");
+}
+
+.bg3{
+    background-image: url("http://mokaru.com.co/wp-content/uploads/2022/10/card3.jpg");
+}
+
+.ilustracion{
+    text-align: center;
+    padding-top: 10px;
+}
+
+.ilustracion img{
+    width: 175px;
+}
+
+.ilustracion2{
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 15px;
+}
+
+.ilustracion2 img{
+    width: 148px;
+    height: 174px;
+}
+
+
+.ilustracion3{
+    text-align: center;
+    padding-top: 38px;
+    padding-bottom: 20px;
+}
+
+.ilustracion3 img{
+    width: 267px;
+    height: 142px;
+}
+
+
+.card h3{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    margin-bottom: 21px;
+}
+
+.texto{
+    
+font-family: 'Quicksand';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+margin-bottom: 31px;
+
+}
+
+
+
+.txt_container{
+    padding: 0 0 0 18px;
+   
+    height:auto;
+}
+
+.txt_container a{
+    text-decoration: none;
+    color: #000000;
+    padding: 10px 11px;
+    border: solid 2px #37DFF5;
+    border-radius: 8px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;    
+}
+
+.monedas{
+    width: 267;
+}
+
+.cards_container{
+    display: flex;
+    justify-content: center;
+    margin: 6% 6%;
+    flex-wrap: wrap;
+
+    
+}
+
+.Servicios{
+    background-color: #FAFAFA;
+    padding: 70px 0 1px 0;
+}
+/*SERVICIOS*/
+
+
+
+
+/*FAQ*/
+
+
+.faqSection{
+    padding: 70px 0 40px 0 ;
+}
+
+.faqs{
+    margin-bottom: 45px ;
+}
+.faq{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    overflow-x:auto;
+    margin:  0 20px;
+    
+    
+}
+.preguntaLink{
+    text-align: center;
+    text-decoration: none; 
+    color: #000000;  
+    
+    padding: 20px;
+    margin: 0 10px;
+}
+
+.simbolo{
+    font-size: 40px;
+    font-family: 'quicksand';
+    font-weight: 600;
+    background-color: #c1f3fa;
+    border-radius: 100%;
+    width: 50px;
+    margin: 0 auto;
+    
+}
+
+.pregunta{
+    font-family: 'Montserrat';
+    margin-top: 10px;
+    font-weight:400 ;
+
+}
+/*FAQ*/
+
+/*CONTACTO*/
+.contactSection{
+    display: grid;
+    grid-template-columns: 60% 40%;
+}
+
+.listaContacto{
+    background-color: #424242;
+    display: flex;
+    padding-bottom: 50px;
+}
+
+.listado{
+    margin: 50px 0;
+    
+}
+
+.listado li{
+    display: flex;
+    margin: 25px 0;
+}
+
+.listado li p{
+    line-height: 24px;
+    margin-left: 10px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #FFFFFF;
+}
+
+
+
+
+.contactInfo h2{
+    
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 600;
+font-size: 36px;
+color: #FFFFFF;
+margin: 50px 20px 50px 0;
+}
+
+
+.mediaCard{
+    height: 400px;
+    margin-top: 20px;
+}
+
+
+.wppbtn {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    padding: 10px 27px;
+    background: linear-gradient(90deg, #03B9DF 0%, #3297EC 100%);
+    border-radius: 9px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);  
+}
+
+@media (max-width: 790px) {
+    .contactSection{
+        display: block;
+        
+    }
+    .formulario{
+        padding-bottom: 50px;
+    }
+}
+
+@media (max-width: 460px) {
+    .mediaCard{
+        display: none;
+    }
+    .listaContacto{
+        padding-left: 50px;
+    }
+}
+
+
+
+/*form******************/
+
+.formulario{
+    
+    width: 80%;
+    margin: 0 auto;
+}
+
+.formulario h2{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    margin: 35px 0;
+}
+
+.contacto{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.input{
+    padding: 10px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    border: 1px solid #3572E9;
+    border-radius: 7px;
+}
+
+.enviar_contact{
+   
+
+    background-color: #3076E8 ;
+    border: none;
+    width: 150px;
+    height: 50px;
+    color: #FFFFFF;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    border-radius: 7px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.envio{
+    text-align: center;
+}
+
+.titulo_contacto{
+    font-family: 'Montserrat';
+font-style: normal;
+font-weight: 600;
+font-size: 36px;
+margin: 30px 0 70px 6%;
+}
+
+/*CONTACTO*/
+
+
+
+
+
+/*FOOTER*/
+footer{
+    background-color: #FAFAFA;
+    padding: 80px 80px 10px 80px;
+    
+    
+}
+
+.floor1{
+    display: flex;
+    justify-content: space-between;
+}
+
+.linksF{
+    display: flex;
+}
+
+.linksF a{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #0A142F;
+    text-decoration: none;
+    margin-right: 40px;
+}
+
+.redesF{
+    display: flex;
+}
+
+.separador{
+    width: 100%;
+    height: 0.1px;
+    background-color: #000000 ;
+
+    margin: 40px 0;
+}
+
+.floor2{
+    display: flex;
+    justify-content: space-between;
+}
+
+.floor2 p{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    color: #0A142F;
+}
+
+.tyc{
+    display: flex;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+
+    
+}
+
+.tyc a{
+    margin-left: 30PX;
+    text-decoration: none;
+    color: #0A142F;
+}
+
+.logoF{
+   
+    text-align: center;
+    margin: 20px;
+}
+
+.socialIcon{
+    width: 24px;
+    margin: 0 7px;
+    
+}
+
+@media (max-width: 857px) {
+    footer{
+        text-align: center;
+    }
+
+    .floor1{
+        flex-direction: column;
+    }
+    
+    .linksF{
+        text-align: center;
+        display: block;
+       
+        
+    }
+
+    .linksF a{
+        
+        margin: 20px;
+        font-size: 20px;
+    }
+
+    .redesF{
+       
+       text-align: center;
+    
+       margin: 25px auto;
+    }
+
+    
+
+    .floor2{
+        flex-direction: column;
+        
+    }
+
+    .floor2 p{
+        font-size: 16px;
+    }
+
+    .tyc{
+        display: block;
+        margin-top: 25px;
+    }
+
+    .tyc a {
+        margin: 0 10px;
+        font-size: 16px;
+    }
+}
+/*FOOTER*/
+
+
+
+
+
+
+
+
+
+.bg{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+}
+
+
+  
