--- a/assets/front/main.css
+++ b/assets/front/main.css
@@ -472,7 +472,7 @@ margin-bottom: 31px;
     text-align: center;
     text-decoration: none; 
     color: #000000;  
-    
+    width: 250px;
     padding: 20px;
     margin: 0 10px;
 }
