Template releases update

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*!
 Theme Name: Mokaru
-Theme URI: http://underscores.me/
-Author: Underscores.me
-Author URI: http://underscores.me/
-Description: Description
+Theme URI: https://github.com/Fullstack-belka/template-mokaru
+Author: Belkacompany
+Author URI: https://github.com/Fullstack-belka/
+Description: Tema usado para Mokaru
 Version: 1.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
