--- a/assets/dashboard/dashboard.css
+++ b/assets/dashboard/dashboard.css
@@ -22,6 +22,7 @@
     font-family: 'mulish';
 }
 .main_content{padding-left: 200px;}
+@media (max-width:876px) {.main_content{padding-left: 10px;}}
 
 .logo-a{
     margin: 0 auto;
