--- a/assets/front/main.css
+++ b/assets/front/main.css
@@ -997,7 +997,7 @@ color: rgb(0, 0, 0);
     }
     
     .baner_content img{
-      height: 400px;
+      max-height: 400px;
     
     }
     @media only screen and (max-width: 403px) {
@@ -1348,10 +1348,9 @@ color: rgb(0, 0, 0);
     }
     
     .retiro-simulador{
-      display: grid;
-      grid-template-columns: 50% 50%;
-      grid-template-rows: auto auto auto;
-      gap: 20px;
+display: flex;
+flex-direction: column;
+justify-content: center;
       margin-left: 7rem;
       margin-right: 7rem;
       margin-top: 50px;
@@ -1405,7 +1404,7 @@ color: rgb(0, 0, 0);
     outline: 0px;
     border-bottom: 1px solid rgba(44, 42, 41, 1);
     margin-bottom: 0px;
-    width: 70%;
+    width: 100%;
     margin-top: 2rem;
     font-family: 'Quicksand';
     font-style: normal;
@@ -1460,8 +1459,7 @@ color: rgb(0, 0, 0);
       padding: 1rem;
       border-radius: 8px;
       border: solid 1px rgba(44, 42, 41, 1);
-      height: calc(100% - 84px);
-      margin-top: 50px;
+ 
       
     }
     
@@ -1485,6 +1483,7 @@ color: rgb(0, 0, 0);
       grid-column: 1/3;
       padding-bottom: 20px;
       justify-self: center;
+      text-align: center;
       
     }
     
@@ -1506,6 +1505,9 @@ color: rgb(0, 0, 0);
     
     
     @media (max-width: 971px){
+      .cuadro-retiro{
+        text-align: center;
+      }
     
       body{
           font-size: 14px;
